افزودن بخش نظرات مشتریان به صفحه اصلی

--- a/home.html
+++ b/home.html
@@ -65,6 +65,21 @@
       </p>
     </div>
   </section>
+  <section id="testimonials" class="bg-white py-16">
+    <div class="max-w-6xl mx-auto px-4 text-right">
+      <h3 class="text-2xl font-bold text-primary mb-8">نظرات مشتریان</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="bg-primary/5 p-6 rounded-xl shadow text-gray-700">
+          <p class="mb-4">«واقعا از خدمات نظافت منزل راضی بودم. تیم بسیار حرفه‌ای و خوش‌برخورد بودند.»</p>
+          <p class="text-sm text-primary font-semibold">- سارا از تبریز</p>
+        </div>
+        <div class="bg-primary/5 p-6 rounded-xl shadow text-gray-700">
+          <p class="mb-4">«نظافت شرکت ما با دقت و سرعت انجام شد. حتما دوباره از خدمات استفاده می‌کنیم.»</p>
+          <p class="text-sm text-primary font-semibold">- علی از تبریز</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="contact" class="bg-primary/10 py-16">
     <div class="max-w-3xl mx-auto px-4 text-right">
       <h3 class="text-2xl font-bold text-primary mb-4">تماس با ما</h3>
