ویرایش های مورد نیاز

--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
     </div>
   </section>
   <footer class="bg-white py-6 text-center text-sm text-gray-500">
-    © 2025 پاک‌سرویس | تمیزی، تخصص ماست
+    © 2025 تابان رفاه تبریز | تمیزی، تخصص ماست
   </footer>
 </body>
 </html>
