Edit header section for better layout

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl font-bold mb-4">تمیزی واقعی با تیم حرفه‌ای ما</h2>
       <p class="text-lg mb-6">خدمات نظافت منزل، شرکت، راه‌پله و مشاعات با بهترین کیفیت و قیمت مناسب</p>
-      <a href="#contact" class="inline-block bg-white text-primary px-6 py-2 rounded-full hover:bg-gray-100 transition">درخواست خدمات</a>
+      <a href="#contact" class="inline-block bg-white text-primary px-6 py-2 rounded-full hover:bg-gray-100 transition">درخواست خدمات و رزرو</a>
     </div>
   </section>
   <section id="services" class="max-w-6xl mx-auto px-4 py-16">
