--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
       }
     }
   </script>
+  <link rel="icon" type="image/x-icon" href="cleaning.png">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
