Add feature highlights section to improve trust and visual appeal

--- a/main.html
+++ b/main.html
@@ -58,6 +58,26 @@
       </div>
     </div>
   </section>
+  <section class="max-w-6xl mx-auto px-4 py-16">
+    <h3 class="text-2xl font-bold text-right text-primary mb-8">چرا تابان رفاه تبریز؟</h3>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-right">
+      <div class="bg-white rounded-xl shadow p-6 hover:shadow-lg transition">
+        <div class="text-4xl text-primary mb-4">🧼</div>
+        <h4 class="font-semibold text-primary mb-2">مواد شوینده استاندارد</h4>
+        <p class="text-sm text-gray-600">استفاده از مواد باکیفیت و ایمن برای سلامت شما و محیط زیست</p>
+      </div>
+      <div class="bg-white rounded-xl shadow p-6 hover:shadow-lg transition">
+        <div class="text-4xl text-primary mb-4">👨‍🔧</div>
+        <h4 class="font-semibold text-primary mb-2">پرسنل آموزش‌دیده</h4>
+        <p class="text-sm text-gray-600">تیم حرفه‌ای با اخلاق کاری بالا و تجربه در انواع خدمات نظافتی</p>
+      </div>
+      <div class="bg-white rounded-xl shadow p-6 hover:shadow-lg transition">
+        <div class="text-4xl text-primary mb-4">⏱️</div>
+        <h4 class="font-semibold text-primary mb-2">سرعت و دقت</h4>
+        <p class="text-sm text-gray-600">انجام خدمات در زمان مقرر با کیفیت تضمینی</p>
+      </div>
+    </div>
+  </section>  
   <section id="about" class="bg-white py-16">
     <div class="max-w-4xl mx-auto px-4 text-right">
       <h3 class="text-2xl font-bold text-primary mb-4">درباره پاک‌سرویس</h3>
