Add FAQ section to homepage for common customer questions

--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
   </section>  
   <section id="about" class="bg-white py-16">
     <div class="max-w-4xl mx-auto px-4 text-right">
-      <h3 class="text-2xl font-bold text-primary mb-4">درباره پاک‌سرویس</h3>
+      <h3 class="text-2xl font-bold text-primary mb-4">درباره تابان رفاه تبریز</h3>
       <p class="text-gray-700 leading-relaxed">
         شرکت پاک‌سرویس با بیش از ۱۰ سال سابقه در ارائه خدمات نظافتی، با تیمی مجرب و آموزش‌دیده آماده خدمت‌رسانی به منازل، شرکت‌ها و مجتمع‌های مسکونی است. هدف ما رضایت کامل مشتریان و ارائه خدمات با کیفیت بالا است.
       </p>
@@ -101,6 +101,25 @@
       </div>
     </div>
   </section>
+  <section id="faq" class="bg-white py-16">
+    <div class="max-w-4xl mx-auto px-4 text-right">
+      <h3 class="text-2xl font-bold text-primary mb-8">سوالات متداول</h3>
+      <div class="space-y-6">
+        <div class="bg-primary/5 p-4 rounded shadow">
+          <h4 class="font-semibold text-primary mb-2">آیا خدمات شامل مواد شوینده هم هست؟</h4>
+          <p class="text-sm text-gray-700">بله، تمامی خدمات با مواد شوینده استاندارد و ایمن ارائه می‌شوند.</p>
+        </div>
+        <div class="bg-primary/5 p-4 rounded shadow">
+          <h4 class="font-semibold text-primary mb-2">چطور می‌تونم خدمات رو رزرو کنم؟</h4>
+          <p class="text-sm text-gray-700">از طریق فرم تماس در پایین صفحه یا تماس تلفنی با ما.</p>
+        </div>
+        <div class="bg-primary/5 p-4 rounded shadow">
+          <h4 class="font-semibold text-primary mb-2">آیا امکان ارائه خدمات در روزهای تعطیل وجود دارد؟</h4>
+          <p class="text-sm text-gray-700">بله، با هماهنگی قبلی امکان ارائه خدمات در روزهای تعطیل نیز وجود دارد.</p>
+        </div>
+      </div>
+    </div>
+  </section>  
   <section id="contact" class="bg-primary/10 py-16">
     <div class="max-w-3xl mx-auto px-4 text-right">
       <h3 class="text-2xl font-bold text-primary mb-4">تماس با ما</h3>
