--- a/main.html
+++ b/main.html
@@ -34,6 +34,9 @@
       </nav>
     </div>
   </header>
+  <div class="bg-yellow-100 text-yellow-800 text-center py-2 px-4">
+    🎉 تخفیف ویژه تابستانی برای خدمات نظافت راه‌پله و مشاعات — فقط تا پایان هفته!
+  </div>  
   <section class="bg-primary text-white py-20 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl font-bold mb-4">تمیزی واقعی با تیم حرفه‌ای ما</h2>
