Add floating WhatsApp contact button

--- a/main.html
+++ b/main.html
@@ -138,5 +138,10 @@
   <footer class="bg-white py-6 text-center text-sm text-gray-500">
     © 2025 تابان رفاه تبریز | تمیزی، تخصص ماست
   </footer>
+    <!-- دکمه واتساپ تماس سریع -->
+    <a href="https://wa.me/989123456789" target="_blank"
+    class="fixed bottom-6 left-6 bg-green-500 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 hover:bg-green-600 transition">
+   <span>💬 واتساپ</span>
+ </a>
 </body>
 </html>
