--- a/main.html
+++ b/main.html
@@ -142,6 +142,7 @@
     <a href="https://wa.me/989123456789" target="_blank"
     class="fixed bottom-6 left-6 bg-green-500 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 hover:bg-green-600 transition">
    <span>💬 واتساپ</span>
+   <!-- comment -->
  </a>
 </body>
 </html>
