--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#0ea5e9', // Sky Blue 500
+                        primary: '#0ea5e9',
                     },
                     fontFamily: {
                         sans: ['Vazirmatn', 'sans-serif'],
