Minimize the code

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title -->
     <title>شرکت خدمات نظافتی تابان رفاه تبریز</title>
     <!-- SEO Tags -->
     <meta name="description" content="شرکت خدمات نظافتی تابان رفاه تبریز | نظافت منزل، شرکت و مشاعات با نیروهای آموزش‌دیده و مواد شوینده استاندارد.">
